--- a/public_html/SCSS/layout.scss
+++ b/public_html/SCSS/layout.scss
@@ -9,7 +9,7 @@ $round: 8px;
     min-width: 150px;
     height: 100%;
     text-align: center;
-    transition-duration: 2s;
+    transition-duration: .5s;
     z-index: 3;
 }
 .sideMenuHidden{
@@ -22,7 +22,7 @@ $round: 8px;
     max-width: 30%;
     text-align: center;
     align-items: center;
-    transition-duration: 2s;
+    transition-duration: .5s;
     z-index: 3;
 }
 .triggHidden{
@@ -35,7 +35,7 @@ $round: 8px;
   background: transparent;
   vertical-align: middle;
   text-align: center;
-  transition-duration: 2s;
+  transition-duration: .5s;
   cursor: pointer;
   border-radius: $round;
 }
@@ -49,7 +49,7 @@ $round: 8px;
   display: block;
   vertical-align: middle;
   text-align: center;
-  transition-duration: 2s;
+  transition-duration: .5s;
   border-radius: $round;
   cursor: pointer;
 }
@@ -205,7 +205,7 @@ $round: 8px;
     border-top-left-radius: $round;
     border-bottom-left-radius: $round;
     background-color: #d9d1ea;
-    transition-duration: 2s;
+    transition-duration: .5s;
     z-index: 60;
 }
 .productsTabShown{
@@ -218,7 +218,7 @@ $round: 8px;
     border-top-left-radius: $round;
     border-bottom-left-radius: $round;
     background-color: #d9d1ea;    
-    transition-duration: 2s;
+    transition-duration: .5s;
     z-index: 60;
 }
 .productsTrigg{
