--- a/public_html/SCSS/layout.scss
+++ b/public_html/SCSS/layout.scss
@@ -250,6 +250,12 @@ $round: 8px;
     width: 100%;
     max-height: 100%;
 }
+#prevBtt{
+    
+}
+#nextBtt{
+    
+}
 .productTab td{
     border: solid 2px gray;
     text-align: center;
